--- a/app/src/main/res/layout/dialog_create_place.xml
+++ b/app/src/main/res/layout/dialog_create_place.xml
@@ -3,15 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingStart="15dp"
-    android:paddingEnd="15dp">
+    android:paddingHorizontal="20dp">
 
     <EditText
         android:id="@+id/etTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Title"
+        android:hint="Location"
         android:inputType="textPersonName"
         android:textSize="24sp" />
 
